--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p {
 </div>
 
 <div class="paper" >
-<p class="p1">Hello Farhan 😘.<br>Drag the papers to move!</p>
+<p class="p1">Hello Vy😘.<br>Drag the papers to move!</p>
 </div>
   <script>
 
