--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ p {
 
 <div class="paper red" >
 <p class="p1"> and My Favorite</p>
-<p class="p2">Person (after my family)😍</p>
+<p class="p2">Person (literally)😍</p>
 </div>
 
 <div class="paper" >
