--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@ p {
 </p<></div>
 
 <div class="paper" >
-  <p class="p1">I know I'm not special and<br>You're this caring for everyone!</p>
+  <p class="p1">We played Minecraft together and<br>And I enjoyed every day of it!</p>
   </div>
 
 <div class="paper image" >
-  <p>How can someone </p>
-   <p>be so cute ❤️ <br> yet so kind...</p>
+  <p>You are awesome </p>
+   <p>and fun to be with ❤️ <br>I enjoy every moment with you</p>
 
   <img src="images/3.jpg">
 </div>
@@ -119,12 +119,12 @@ p {
 </div>
 
 <div class="paper" >
-<p class="p1">You are Cute </p>
+<p class="p1">You are Smart </p>
   <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper" >
-<p class="p1">Hello Jai😘.<br>Drag the papers to move!</p>
+<p class="p1">Hello Mussu😘.<br>Drag the papers to move!</p>
 </div>
   <script>
 
