--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@ p {
 
   
 <div class="paper image">
-  <p> That's why I've fallen </p>
-    <p>in love with YOU!!! 😩 </p>
+  <p> Sad is bad</p>
+    <p>So please don't be sad🥹😩 </p>
    <img src="images/1.jpg">
 </div>
-<div class="paper"><p>Can't imagine what will you do <br>when you fall in love...</p></div> 
+<div class="paper"><p>Can't imagine what would I had done <br>You helped me without even realising...</p></div> 
 
-<div class="paper"><p>If you can do so much for friends...</p></div> <div class="paper image">
+<div class="paper"><p>Without you...</p></div> <div class="paper image">
   <p< p="">
   <img src="images/2.jpg">
 </p<></div>
 
 <div class="paper" >
-  <p class="p1">We played Minecraft together and<br>And I enjoyed every day of it!</p>
+  <p class="p1">We studied 12th together and<br>And I enjoyed every day of it!</p>
   </div>
 
 <div class="paper image" >
@@ -124,7 +124,7 @@ p {
 </div>
 
 <div class="paper" >
-<p class="p1">Hello Mussu😘.<br>Drag the papers to move!</p>
+<p class="p1">Hello Farhan😘.<br>Drag the papers to move!</p>
 </div>
   <script>
 
