--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@ p {
 </div>
 
 <div class="paper" >
-<p class="p1">You are Smart </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+<p class="p1"> Today we will talk about the actual mriityu, </p>
+  <p class="p1">Not his online persona <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper" >
-<p class="p1">Hello Farhan😘.<br>Drag the papers to move!</p>
+<p class="p1">Hello Everyone😘.<br>Drag the papers to move!</p>
 </div>
   <script>
 
