--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ p {
   </div>
 
 <div class="paper image" >
-  <p>You are awesome </p>
+  <p> He is completely different as you may have known him</p>
    <p>and fun to be with ❤️ <br>I enjoy every moment with you</p>
 
   <img src="images/3.jpg">
@@ -114,8 +114,8 @@ p {
 
 
 <div class="paper red" >
-<p class="p1"> and My Favorite</p>
-<p class="p2">Person (literally)😍</p>
+<p class="p1"> He is 25 years old that pretends to be a minor</p>
+<p class="p2">(typical pedophilic behaviour)</p>
 </div>
 
 <div class="paper" >
