--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ p {
 
 <div class="paper image" >
   <p> He is completely different as you may have known him</p>
-   <p>and fun to be with ❤️ <br>I enjoy every moment with you</p>
+   <p> His true face <br> is going to get revealed</p>
 
   <img src="images/3.jpg">
 </div>
